--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns:mvc="http://www.springframework.org/schema/mvc"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -15,6 +16,9 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
+
+        <mvc:resources mapping="/webjars/**" location="classpath:/META-INF/resources/webjars/"/>
+
         <java.version>1.8</java.version>
 
         <!-- Web dependencies -->
@@ -68,6 +72,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator</artifactId>
+            <version>0.30</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -110,5 +120,7 @@
             </plugin>
         </plugins>
     </build>
+
+
 
 </project>
